--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,11 @@ body,
 canvas {
     touch-action: none;
 }
+
+.htmlScreen iframe {
+    width: 1024px;
+    height: 670px;
+    border: none;
+    border-radius: 20px;
+    background-color: #000000;
+}
